--- a/app/views/menu_lists/index.html.erb
+++ b/app/views/menu_lists/index.html.erb
@@ -1,1 +1,12 @@
-<h1>menu</h1>
+
+
+<!-- ボタン -->
+<p>メニューを決める</p>
+<button type="button" name="button">メニューを決める</button>
+
+<br>
+<!-- メニューを追加する -->
+<p>メニューを追加</p>
+<%= @menu_list.menu_name %>
+<!-- メニューの一覧が見れる -->
+<p>登録されているメニューの一覧</p>
