ランダムにメニュー出せるようにした

--- a/app/views/menu_lists/index.html.erb
+++ b/app/views/menu_lists/index.html.erb
@@ -1,3 +1,6 @@
+<!-- メニューを表示 -->
+<%=  @menu_list.find(rand(2.. @menu_list.ids.length)).menu_name
+ %>
 
 
 <!-- ボタン -->
@@ -7,6 +10,6 @@
 <br>
 <!-- メニューを追加する -->
 <p>メニューを追加</p>
-<%= @menu_list.menu_name %>
+<%= %>
 <!-- メニューの一覧が見れる -->
 <p>登録されているメニューの一覧</p>
