ランダム表示ギミック修正

--- a/app/views/menu_lists/index.html.erb
+++ b/app/views/menu_lists/index.html.erb
@@ -1,27 +1,10 @@
 <!-- メニューを表示 -->
-<div id="namechange">
-<%=  @menu_list.find(rand(2.. @menu_list.ids.length)).menu_name %>
-</div>
+<%=  @menu_list.offset(rand(MenuList.count)).first.menu_name %>
 
-<!-- ボタン -->
-<p>メニューを決める</p>
-<div id="text_button">
 <button type="button" id="menu_button"><%= link_to "メニューを決める",menu_lists_path(@menu_list) %></button>
-</div>
 
 <br>
 <!-- メニューを追加する -->
 <p>メニューを追加</p>
-<%= %>
 <!-- メニューの一覧が見れる -->
 <p>登録されているメニューの一覧</p>
-
-
-
-<!-- <script>
-  const target = document.getElementById('menu_button');
-  target.addEventListener('click', function() {
-    const aa = document.getElementById('namechange');
-    document.getElementById("namechange").innerHTML = "<%=  @menu_list.find(rand(2.. @menu_list.ids.length)).menu_name %>"
-  });
-</script> -->
