--- a/app/views/menu_lists/index.html.erb
+++ b/app/views/menu_lists/index.html.erb
@@ -8,3 +8,5 @@
 <%=  @menu_list.offset(rand(MenuList.count)).first.menu_name %>
 
 <button type="button" id="menu_button"><%= link_to "メニューを決める",menu_lists_path(@menu_list) %></button>
+
+<%= link_to "メニュー追加",new_menu_list_path(@menu_list) %>
