--- a/app/views/menu_lists/index.html.erb
+++ b/app/views/menu_lists/index.html.erb
@@ -1,10 +1,15 @@
-<!-- メニューを追加する -->
-<p>メニューを追加</p>
+
+
+<%= link_to "メニュー追加",new_menu_list_path(@menu_list) %>
+
 <!-- メニューの一覧が見れる -->
-<p>登録されているメニューの一覧</p>
+<%binding.pry%>
+<%= link_to "登録メニューの一覧",menu_list_path(current_user) %>
+
 
 <p>現在登録されているメニュー数は<%= MenuList.count%>個です</p>
-<!-- メニューを表示 -->
+
+<!--表示されるメニューをセットする -->
 <% randam_menu = @menu_list.offset(rand(MenuList.count)).first %>
 <%= randam_menu.menu_name %>
 <% unless randam_menu.image.url.nil?%>
@@ -14,5 +19,3 @@
 <% end %>
 
 <button type="button" id="menu_button"><%= link_to "メニューを決める",menu_lists_path(@menu_list) %></button>
-
-<%= link_to "メニュー追加",new_menu_list_path(@menu_list) %>
