--- a/app/views/menu_lists/index.html.erb
+++ b/app/views/menu_lists/index.html.erb
@@ -2,19 +2,19 @@
 
 <%= link_to "メニュー追加",new_menu_list_path(@menu_list) %>
 
-<!-- メニューの一覧が見れる -->
 <%= link_to "登録メニューの一覧",menu_list_path(current_user) %>
 
+<%= link_to "家族名を追加する",new_family_path(current_user) %>
 
-<p>現在登録されているメニュー数は<%= MenuList.count%>個です</p>
+<%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+
+<p>現在登録されているメニュー数は<%= @menu_list.count%>個です</p>
 
 <!--表示されるメニューをセットする -->
-<% randam_menu = @menu_list.offset(rand(MenuList.count)).first %>
-<%= randam_menu.menu_name %>
-<% unless randam_menu.image.url.nil?%>
+<% if @menu_list.present?%>
+  <% randam_menu = @menu_list.offset(rand(@menu_list.count)).first %>
+  <%= randam_menu.menu_name %>
   <%= image_tag randam_menu.image.url, :size =>'300x300' %>
-<% else %>
-    <p class="lead">プロフィール画像：（なし）</p>
 <% end %>
 
 <button type="button" id="menu_button"><%= link_to "メニューを決める",menu_lists_path(@menu_list) %></button>
