--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Corben:700 rel="stylesheet">
   </head>
 
   <body>
@@ -15,9 +16,9 @@
     <% end %>
     <% if user_signed_in? %>
       <header>
-        <nav class="clearfix">
-          <div id="current_user_name"><%= current_user.name %>'s page</div>
-          <div class="hedder_right"><div class="hedder_right"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></div></div>
+        <nav class="clearfix menu_header">
+          <div class="current_user_name"><%= current_user.name %>'s page</div>
+          <div class="hedder_right"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></div>
           <div class="hedder_right"><%= link_to "メニュー追加",new_menu_list_path(@menu_list) %></div>
           <div class="hedder_right"><%= link_to "登録メニューの一覧",menu_list_path(current_user) %></div>
           <div class="hedder_right"><%= link_to "家族名を追加する",new_family_path(current_user) %></div>
