--- a/app/views/menu_lists/index.html.erb
+++ b/app/views/menu_lists/index.html.erb
@@ -3,17 +3,54 @@
 </div>
 
 <!--表示されるメニューをセットする -->
-<% if @menu_list.present? %>
-    <% randam_menu = @menu_list.offset(rand(@menu_list.count)).first %>
-  <div class="main">
-    <p class="menu_name"><%= randam_menu.menu_name %></p>
-    <p><%= image_tag randam_menu.image.url, :size =>'300x300' %></p>
-    <button type="button" id="menu_button" class="btn btn-success"><%= link_to "メニューを決める",menu_lists_path(@menu_list) %></button>
+<div id="vue_main">
+  <div v-show="show">
+    <% if @menu_list.present? %>
+        <% randam_menu = @menu_list.offset(rand(@menu_list.count)).first %>
+      <div class="main">
+        <p class="menu_name"><%= randam_menu.menu_name %></p>
+        <p><%= image_tag randam_menu.image.url, :size =>'300x300' %></p>
+        <button type="button" id="menu_button" class="btn btn-success"><%= link_to "メニューを決める",menu_lists_path(@menu_list) %></button>
+      </div>
+    <% else %>
+      <ol class="back_main">
+        <li>「Add family_name」で家族名を追加</li>
+        <li>「Add menu」でメニューを登録。</li>
+        <li>利用開始</li>
+      </ol>
+    <% end %>
   </div>
-<% else %>
-  <ol class="back_main">
-    <li>「Add family_name」で家族名を追加</li>
-    <li>「Add menu」でメニューを登録。</li>
-    <li>利用開始</li>
-  </ol>
-<% end %>
+  <button v-show="button" @click="click">ボタン</button>
+</div>
+
+<%# 保険用 %>
+<%# if @menu_list.present? %>
+    <%# randam_menu = @menu_list.offset(rand(@menu_list.count)).first %>
+  <!-- <div class="main"> -->
+    <!-- <p class="menu_name"><%#= randam_menu.menu_name %></p> -->
+    <!-- <p><%#= image_tag randam_menu.image.url, :size =>'300x300' %></p> -->
+    <!-- <button type="button" id="menu_button" class="btn btn-success"><%#= link_to "メニューを決める",menu_lists_path(@menu_list) %></button> -->
+  <!-- </div> -->
+<%# else %>
+  <!-- <ol class="back_main"> -->
+    <!-- <li>「Add family_name」で家族名を追加</li> -->
+    <!-- <li>「Add menu」でメニューを登録。</li>
+    <li>利用開始</li> -->
+  <!-- </ol> -->
+<%# end %>
+
+<script>
+  new Vue({
+     el: '#vue_main',
+     data: {
+         show: false,
+         button: true
+     },
+     methods: {
+         click: function () {
+             this.show = !this.show,
+             this.button = !this.button
+         }
+     }
+ });
+</script>
