非同期でランダム表示実装

--- a/app/views/menu_lists/_randam_menu.html.erb
+++ b/app/views/menu_lists/_randam_menu.html.erb
@@ -1,9 +1,9 @@
-<% if @menu_list.present? %>
-    <% randam_menu = @menu_list.offset(rand(@menu_list.count)).first %>
+<% if @menu_lists.present? %>
+    <% randam_menu = @menu_lists.offset(rand(@menu_lists.count)).first %>
   <div class="main">
     <p class="menu_name"><%= randam_menu.menu_name %></p>
      <p><%= image_tag randam_menu.image.url, :size =>'300x300' %></p>
-     <button type="button" id="menu_button" class="btn btn-success"><%= link_to "メニューを決める",menu_lists_path(@menu_list) %></button>
+     <button type="button" id="menu_button" class="btn btn-success"><%= link_to "メニューを決める",menu_lists_path(@menu_lists) %></button>
    </div>
 <% else %>
    <ol class="back_main">
