--- a/app/views/menu_lists/index.js.erb
+++ b/app/views/menu_lists/index.js.erb
@@ -1,5 +1,7 @@
 $("textarea").val("");
 $("input").val("");
 $('#exampleModal').modal('hide')
+
+// ランダム表示をする
 $('.randam_menu').html("<%= escape_javascript(render 'randam_menu', menu_list: @menu_list
 ) %>")
