--- a/app/views/menu_lists/index.html.erb
+++ b/app/views/menu_lists/index.html.erb
@@ -7,12 +7,12 @@
   <%= render "randam_menu" , menu_list: @menu_lists %>
 </div>
 
-<!-- Button trigger modal -->
+<!-- モーダルボタン -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
   メニュー追加
 </button>
 
-<!-- Modal -->
+<!-- モーダル -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
