--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       <nav class="container-fluid menu_header">
         <div class="row">
           <div class="col-12 col-md-4  col-lg-4 text-center text-md-left current_user_name"><%= link_to "#{current_user.name}'s page", root_path %></div>
-          <div class="col-12 col-md-1 col-lg-2 text-center text-md-right hedder_right"><%= link_to "Add family_name",new_family_path(current_user) %></div>
+          <div class="col-12 col-md-1 col-lg-2 text-center text-md-right hedder_right" data-toggle="modal" data-target="#exampleModalLong"><botton class="btn btn-link">Add family_name</botton></div>
           <div class="col-12 col-md-1 col-lg-2 text-center text-md-right hedder_right" data-toggle="modal" data-target="#exampleModal"><button class="btn btn-link">Add menu</botton></div>
           <div class="col-12 col-md-1 col-lg-2 text-center text-md-right hedder_right"><%= link_to "Menu list",menu_list_path(current_user) %></div>
           <div class="col-12 col-md-1 col-lg-2 text-center text-md-right hedder_right"><%= link_to "Log out", destroy_user_session_path, method: :delete %></div>
