--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,9 +28,12 @@ header{
 }
 header a{
   color: white;
+  white-space: nowrap;
+  
 }
 .btn-link{
   color: white;
+  white-space: nowrap;
 }
 .hedder_right{
   padding:35px;
