--- a/app/views/menu_lists/index.html.erb
+++ b/app/views/menu_lists/index.html.erb
@@ -29,10 +29,16 @@
         </div>
       <% end %>
         <div class="modal-body">
-          <%= form.label :メニュー名 %>
-          <%= form.text_field :menu_name %>
-          <%= form.file_field :image %>
-          <%= form.collection_select :family_id, @families, :family_name, :family_name, include_blank: "選択して下さい" %>
+          <div class=""form-group"">
+            <%= form.label :メニュー名 %>
+            <%= form.text_field :menu_name %>
+          </div>
+          <div class="form-group">
+            <%= form.file_field :image %>
+          </div>
+          <div class="form-group">
+            <%= form.collection_select :family_id, @families, :family_name, :family_name, include_blank: "選択して下さい" %>
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
@@ -65,8 +71,10 @@
               </ul>
             </div>
           <% end %>
-          <%= form.label :家族名 %>
-          <%= form.text_field :family_name %>
+          <div class="form-group">
+            <%= form.label :家族名 %>
+            <%= form.text_field :family_name %>
+          </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
