menuswitchのデザイン設定

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Corben:700 rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Anton rel="stylesheet">
     <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="http://mplus-fonts.sourceforge.jp/webfonts/general-j/mplus_webfonts.css">
   </head>
 
   <body>
