--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,7 +29,7 @@ header{
 header a{
   color: white;
   white-space: nowrap;
-  
+
 }
 .btn-link{
   color: white;
@@ -49,7 +49,7 @@ header a{
   font-size: 20px;
   font-family: 'Anton', sans-serif;
 }
-.main{
+.randam_menu{
   text-align: center;
 }
 .menu_name{
@@ -73,4 +73,10 @@ header a{
     font-family: 'Anton', sans-serif;
 }
 
+/* メニュースイッチ */
+#menu_switch{
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  font-family: 'M+ Type-1 (general-j) Black';
+}
 /* rgb(119, 228, 37) */
