メニュー一覧のグリッド設定

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -80,3 +80,8 @@ header a{
   font-family: 'M+ Type-1 (general-j) Black';
 }
 /* rgb(119, 228, 37) */
+
+/* show */
+table{
+  text-align: center;
+}
