画像のレスポンシブデザイン実装

--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -1,7 +1,7 @@
 
 <table class="container">
   <thead class="row mt-5">
-    <tr class="offset-1 col-10 row">
+    <tr class="offset-1 col-10 row table_head">
       <th class="col-4">メニュー名</th>
       <th class="col-4">image</th>
       <th class="col-4">投稿者</th>
@@ -11,7 +11,10 @@
       <tfoot class="card row mt-4">
         <tr class="card-body offset-1 col-10 row">
             <td class="col-4"><%= menu_list.menu_name %></td>
-            <td class="col-4"><%= image_tag menu_list.image.url, :size =>'300x300' %></td>
+            <td class="col-4">
+
+                <%= image_tag menu_list.image.url, class:"img-fluid" ,alt:"Responsive image" %>
+          </td>
             <td class="col-4"><%= @families.find(menu_list.family_id).family_name %></td>
         </tr>
       </tfoot>
