--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -1,5 +1,5 @@
 
-<table class="container">
+<table class="container show_table">
   <thead class="row mt-5">
     <tr class="offset-1 col-10 row table_head">
       <th class="col-4">メニュー名</th>
@@ -8,18 +8,20 @@
     </tr>
   </thead>
   <% @menu_lists.each_with_index do |menu_list,ids| %>
-      <tfoot class="card row mt-4">
+      <tfoot class="card row mt-4 t_foot">
         <tr class="card-body offset-1 col-10 row">
-            <td class="col-4"><%= menu_list.menu_name %></td>
-            <td class="col-4">
-
-                <%= image_tag menu_list.image.url, class:"img-fluid" ,alt:"Responsive image" %>
-          </td>
-            <td class="col-4"><%= @families.find(menu_list.family_id).family_name %></td>
+            <td class="col-4 d-flex align-items-center justify-content-center table_data">
+              <div class="menu_name">
+                <%= menu_list.menu_name %>
+              </div>
+            </td>
+            <td class="col-4 d-flex align-items-center justify-content-center"><%= image_tag menu_list.image.url, class:"img-fluid" ,alt:"Responsive image" %></td>
+            <td class="col-4 d-flex align-items-center justify-content-center"><%= @families.find(menu_list.family_id).family_name %></td>
         </tr>
       </tfoot>
   <% end %>
 </table>
+
 <!-- add_menuのフォーム -->
 <%= render "add_menu_form" , menu_lists: @menu_list %>
 
