--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -10,18 +10,23 @@
   <% @menu_lists.each_with_index do |menu_list,ids| %>
       <tfoot class="card row mt-4 t_foot">
         <tr class="card-body offset-1 col-10 row">
-            <td class="col-4 d-flex align-items-center justify-content-center table_data">
+            <td class="col-md-4 d-flex align-items-center justify-content-center table_data">
               <div class="menu_name">
                 <%= menu_list.menu_name %>
               </div>
             </td>
-            <td class="col-4 d-flex align-items-center justify-content-center"><%= image_tag menu_list.image.url, class:"img-fluid" ,alt:"Responsive image" %></td>
-            <td class="col-4 d-flex align-items-center justify-content-center"><%= @families.find(menu_list.family_id).family_name %></td>
+            <td class="col-md-4 d-flex align-items-center justify-content-center"><%= image_tag menu_list.image.url, class:"img-fluid" ,alt:"Responsive image" %></td>
+            <td class="col-md-4 d-flex align-items-center justify-content-center"><%= @families.find(menu_list.family_id).family_name %></td>
         </tr>
       </tfoot>
   <% end %>
 </table>
-<%= paginate @menu_lists, theme: 'twitter-bootstrap-4' %>
+
+<!-- ページネーション -->
+<div class="paginate mt-4">
+  <%= paginate @menu_lists, theme: 'twitter-bootstrap-4' %>
+</div>
+
 <!-- add_menuのフォーム -->
 <%= render "add_menu_form" , menu_lists: @menu_list %>
 
