--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -1,4 +1,34 @@
 
+
+<!-- 試してみた -->
+<% @menu_lists.each_with_index do |menu_list,ids| %>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-<%= menu_list.id %>">
+  <%= menu_list.menu_name %>
+</button>
+
+<div class="modal fade" id="modal-<%= menu_list.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <%= menu_list.menu_name %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<% end %>
+
+
+<!-- show画面 -->
 <table class="container show_table">
   <thead class="row mt-5">
     <tr class="offset-1 col-10 row table_head">
