buttonの配置設定

--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -34,7 +34,8 @@
     <tr class="offset-1 col-10 row table_head">
       <th class="col-4">メニュー名</th>
       <th class="col-4">image</th>
-      <th class="col-4">投稿者</th>
+      <th class="col-3">投稿者</th>
+      <th class="col-1 a"></th>
     </tr>
   </thead>
   <% @menu_lists.each_with_index do |menu_list,ids| %>
@@ -46,7 +47,8 @@
               </div>
             </td>
             <td class="col-md-4 d-flex align-items-center justify-content-center"><%= image_tag menu_list.image.url, class:"img-fluid" ,alt:"Responsive image" %></td>
-            <td class="col-md-4 d-flex align-items-center justify-content-center"><%= @families.find(menu_list.family_id).family_name %></td>
+            <td class="col-md-3 d-flex align-items-center justify-content-center"><%= @families.find(menu_list.family_id).family_name %></td>
+            <td class="a col-1"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-<%= menu_list.id %>">・・・</button></td>
         </tr>
       </tfoot>
   <% end %>
