--- a/app/views/menu_lists/show.html.erb
+++ b/app/views/menu_lists/show.html.erb
@@ -1,33 +1,3 @@
-
-
-<!-- 試してみた -->
-<% @menu_lists.each_with_index do |menu_list,ids| %>
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-<%= menu_list.id %>">
-  <%= menu_list.menu_name %>
-</button>
-
-<div class="modal fade" id="modal-<%= menu_list.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <%= menu_list.menu_name %>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-<% end %>
-
-
 <!-- show画面 -->
 <table class="container show_table">
   <thead class="row mt-5">
@@ -35,7 +5,7 @@
       <th class="col-4">メニュー名</th>
       <th class="col-4">image</th>
       <th class="col-3">投稿者</th>
-      <th class="col-1 a"></th>
+      <th class="col-1"></th>
     </tr>
   </thead>
   <% @menu_lists.each_with_index do |menu_list,ids| %>
@@ -48,9 +18,31 @@
             </td>
             <td class="col-md-4 d-flex align-items-center justify-content-center"><%= image_tag menu_list.image.url, class:"img-fluid" ,alt:"Responsive image" %></td>
             <td class="col-md-3 d-flex align-items-center justify-content-center"><%= @families.find(menu_list.family_id).family_name %></td>
-            <td class="a col-1"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-<%= menu_list.id %>">・・・</button></td>
+            <td class="col-md-1"><button type="button" class="btn btn-outline-light" data-toggle="modal" data-target="#modal-<%= menu_list.id %>">・・・</button></td>
         </tr>
       </tfoot>
+
+      <!-- モーダルウィンドウ -->
+      <div class="modal fade" id="modal-<%= menu_list.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>編集</p>
+              <p>削除</p>
+              <%= link_to "イベントを削除する", menu_list_path(menu_list), method: :delete, data: {confirm: "このイベントを削除しますか？"} %>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
+            </div>
+          </div>
+        </div>
+      </div>
   <% end %>
 </table>
 
